@@ -1,10 +1,17 @@
 package com.clinicadmin.sevice.impl;
 
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.security.SecureRandom;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeFormatterBuilder;
+import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
@@ -64,20 +71,20 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 @Service
 public class DoctorServiceImpl implements DoctorService {
-@Autowired
-	private  DoctorsRepository doctorsRepository;
+	@Autowired
+	private DoctorsRepository doctorsRepository;
 
 	@Autowired
-	private  DoctorLoginCredentialsRepository credentialsRepository;
-	
+	private DoctorLoginCredentialsRepository credentialsRepository;
+
 	@Autowired
-	private  PasswordEncoder passwordEncoder;
-	
+	private PasswordEncoder passwordEncoder;
+
 	@Autowired
-	private  DoctorSlotRepository slotRepository;
-	
+	private DoctorSlotRepository slotRepository;
+
 	@Autowired
-	private  ServiceFeignClient serviceFeignClient;
+	private ServiceFeignClient serviceFeignClient;
 
 	@Autowired
 	AdminServiceClient adminServiceClient;
@@ -87,7 +94,7 @@ public class DoctorServiceImpl implements DoctorService {
 
 	@Autowired
 	private ObjectMapper objectMapper;
-	
+
 	@Autowired
 	private MongoOperations mongoOperations;
 
@@ -101,137 +108,137 @@ public class DoctorServiceImpl implements DoctorService {
 		this.serviceFeignClient = serviceFeignClient;
 
 	}
+
 	@Override
 	public Response addDoctor(DoctorsDTO dto) {
-	    Response response = new Response();
-	    try {
-	        dto.trimAllDoctorFields();
+		Response response = new Response();
+		try {
+			dto.trimAllDoctorFields();
 
-	        // -------------------- Check duplicate mobile --------------------
-	        if (doctorsRepository.existsByDoctorMobileNumber(dto.getDoctorMobileNumber())) {
-	            response.setSuccess(false);
-	            response.setMessage("Doctor with this mobile number already exists");
-	            response.setStatus(HttpStatus.BAD_REQUEST.value());
-	            return response;
-	        }
+			// -------------------- Check duplicate mobile --------------------
+			if (doctorsRepository.existsByDoctorMobileNumber(dto.getDoctorMobileNumber())) {
+				response.setSuccess(false);
+				response.setMessage("Doctor with this mobile number already exists");
+				response.setStatus(HttpStatus.BAD_REQUEST.value());
+				return response;
+			}
+			if (credentialsRepository.existsByUsername(dto.getDoctorMobileNumber())) {
+				response.setSuccess(false);
+				response.setMessage("Login credentials already exist for this mobile number");
+				response.setStatus(HttpStatus.BAD_REQUEST.value());
+				return response;
+			}
 
-	        // -------------------- Validate clinic --------------------
-	        ResponseEntity<Response> clinicRes;
-	        try {
-	            clinicRes = adminServiceClient.getClinicById(dto.getHospitalId());
-	        } catch (FeignException fe) {
-	            response.setSuccess(false);
-	            response.setMessage("Clinic not found with ID: " + dto.getHospitalId());
-	            response.setStatus(HttpStatus.NOT_FOUND.value());
-	            return response;
-	        }
+			// -------------------- Validate clinic --------------------
+			ResponseEntity<Response> clinicRes;
+			try {
+				clinicRes = adminServiceClient.getClinicById(dto.getHospitalId());
+			} catch (FeignException fe) {
+				response.setSuccess(false);
+				response.setMessage("Clinic not found with ID: " + dto.getHospitalId());
+				response.setStatus(HttpStatus.NOT_FOUND.value());
+				return response;
+			}
 
-	        if (clinicRes.getBody() == null || !clinicRes.getBody().isSuccess()) {
-	            response.setSuccess(false);
-	            response.setMessage("Clinic not found with ID: " + dto.getHospitalId());
-	            response.setStatus(HttpStatus.NOT_FOUND.value());
-	            return response;
-	        }
+			if (clinicRes.getBody() == null || !clinicRes.getBody().isSuccess()) {
+				response.setSuccess(false);
+				response.setMessage("Clinic not found with ID: " + dto.getHospitalId());
+				response.setStatus(HttpStatus.NOT_FOUND.value());
+				return response;
+			}
 
-	        ClinicDTO clinicDTO = objectMapper.convertValue(clinicRes.getBody().getData(), ClinicDTO.class);
+			ClinicDTO clinicDTO = objectMapper.convertValue(clinicRes.getBody().getData(), ClinicDTO.class);
 
-	        // -------------------- Validate branch --------------------
-	        if (dto.getBranchId() == null || dto.getBranchId().isBlank()) {
-	            response.setSuccess(false);
-	            response.setMessage("Branch ID is required");
-	            response.setStatus(HttpStatus.BAD_REQUEST.value());
-	            return response;
-	        }
+			// -------------------- Validate branch --------------------
+			if (dto.getBranchId() == null || dto.getBranchId().isBlank()) {
+				response.setSuccess(false);
+				response.setMessage("Branch ID is required");
+				response.setStatus(HttpStatus.BAD_REQUEST.value());
+				return response;
+			}
 
-	        ResponseEntity<Response> branchRes;
-	        try {
-	            branchRes = adminServiceClient.getBranchByClinicAndBranchId(
-	                    dto.getHospitalId(), dto.getBranchId());
-	        } catch (FeignException fe) {
-	            response.setSuccess(false);
-	            response.setMessage("Branch not found for clinicId: " 
-	                                + dto.getHospitalId() + " and branchId: " + dto.getBranchId());
-	            response.setStatus(HttpStatus.NOT_FOUND.value());
-	            return response;
-	        }
+			ResponseEntity<Response> branchRes;
+			try {
+				branchRes = adminServiceClient.getBranchByClinicAndBranchId(dto.getHospitalId(), dto.getBranchId());
+			} catch (FeignException fe) {
+				response.setSuccess(false);
+				response.setMessage("Branch not found for clinicId: " + dto.getHospitalId() + " and branchId: "
+						+ dto.getBranchId());
+				response.setStatus(HttpStatus.NOT_FOUND.value());
+				return response;
+			}
 
-	        if (branchRes.getBody() == null || !branchRes.getBody().isSuccess()) {
-	            response.setSuccess(false);
-	            response.setMessage("Branch not found for clinicId: " 
-	                                + dto.getHospitalId() + " and branchId: " + dto.getBranchId());
-	            response.setStatus(HttpStatus.NOT_FOUND.value());
-	            return response;
-	        }
+			if (branchRes.getBody() == null || !branchRes.getBody().isSuccess()) {
+				response.setSuccess(false);
+				response.setMessage("Branch not found for clinicId: " + dto.getHospitalId() + " and branchId: "
+						+ dto.getBranchId());
+				response.setStatus(HttpStatus.NOT_FOUND.value());
+				return response;
+			}
 
-	        Branch branchDTO = objectMapper.convertValue(branchRes.getBody().getData(), Branch.class);
+			Branch branchDTO = objectMapper.convertValue(branchRes.getBody().getData(), Branch.class);
 
-	        // -------------------- Generate doctorId --------------------
-	        String clinicSeq = String.format("%04d", Integer.parseInt(dto.getHospitalId()));
-	        String branchSeq = branchDTO.getBranchId().substring(clinicSeq.length());
+			// -------------------- Generate doctorId --------------------
+			String clinicSeq = String.format("%04d", Integer.parseInt(dto.getHospitalId()));
+			String branchSeq = branchDTO.getBranchId().substring(clinicSeq.length());
 
-	        String counterKey = "doctor_" + dto.getHospitalId() + "_" + branchDTO.getBranchId();
-	        Query query = Query.query(Criteria.where("_id").is(counterKey));
-	        Update update = new Update().inc("seq", 1);
-	        FindAndModifyOptions options = FindAndModifyOptions.options()
-	                .upsert(true)
-	                .returnNew(true);
+			String counterKey = "doctor_" + dto.getHospitalId() + "_" + branchDTO.getBranchId();
+			Query query = Query.query(Criteria.where("_id").is(counterKey));
+			Update update = new Update().inc("seq", 1);
+			FindAndModifyOptions options = FindAndModifyOptions.options().upsert(true).returnNew(true);
 
-	        DoctorCounter counter = mongoOperations.findAndModify(query, update, options, DoctorCounter.class);
-	        long nextDoctorSeq = (counter != null) ? counter.getSeq() : 1L;
-	        String doctorSeq = String.format("%02d", nextDoctorSeq);
+			DoctorCounter counter = mongoOperations.findAndModify(query, update, options, DoctorCounter.class);
+			long nextDoctorSeq = (counter != null) ? counter.getSeq() : 1L;
+			String doctorSeq = String.format("%02d", nextDoctorSeq);
 
-	        String doctorId = clinicSeq + branchSeq + doctorSeq;
-	        dto.setDoctorId(doctorId);
+			String doctorId = clinicSeq + branchSeq + doctorSeq;
+			dto.setDoctorId(doctorId);
 
-	        // -------------------- Map DTO -> Entity --------------------
-	        Doctors doctor = DoctorMapper.mapDoctorDTOtoDoctorEntity(dto);
-	        doctor.setDoctorId(doctorId);
-	        doctor.setHospitalName(clinicDTO.getName());
-	        doctor.setBranchId(branchDTO.getBranchId());
+			// -------------------- Map DTO -> Entity --------------------
+			Doctors doctor = DoctorMapper.mapDoctorDTOtoDoctorEntity(dto);
 
-	        // -------------------- Save doctor --------------------
-	        Doctors savedDoctor = doctorsRepository.save(doctor);
+			doctor.setDoctorId(doctorId);
+			doctor.setHospitalName(clinicDTO.getName());
 
-	        // -------------------- Create login credentials --------------------
-	        String username = savedDoctor.getDoctorMobileNumber();
-	        String rawPassword = generateStructuredPassword();
-	        String encodedPassword = passwordEncoder.encode(rawPassword);
+			// ⚡ Strict branch assignment: Only use the branch provided in payload
+			doctor.setBranchId(dto.getBranchId());
 
-	        DoctorLoginCredentials credentials = DoctorLoginCredentials.builder()
-	                .staffId(savedDoctor.getDoctorId())
-	                .staffName(savedDoctor.getDoctorName())
-	                .hospitalId(savedDoctor.getHospitalId())
-	                .hospitalName(savedDoctor.getHospitalName())
-	                .branchId(branchDTO.getBranchId())
-	                .username(username)
-	                .password(encodedPassword)
-	                .role(dto.getRole())
-	                .permissions(savedDoctor.getPermissions())
-	                .build();
+			// -------------------- Save doctor --------------------
+			Doctors savedDoctor = doctorsRepository.save(doctor);
 
-	        credentialsRepository.save(credentials);
+			// -------------------- Create login credentials --------------------
+			String username = savedDoctor.getDoctorMobileNumber();
+			String rawPassword = generateStructuredPassword();
+			String encodedPassword = passwordEncoder.encode(rawPassword);
 
-	        Map<String, Object> data = new HashMap<>();
-	        data.put("doctor", savedDoctor);
-	        data.put("username", username);
-	        data.put("temporaryPassword", rawPassword);
-	        data.put("generatedDoctorId", doctorId);
+			DoctorLoginCredentials credentials = DoctorLoginCredentials.builder().staffId(savedDoctor.getDoctorId())
+					.staffName(savedDoctor.getDoctorName()).hospitalId(savedDoctor.getHospitalId())
+					.hospitalName(savedDoctor.getHospitalName()).branchId(savedDoctor.getBranchId()).username(username)
+					.password(encodedPassword).role(dto.getRole()).permissions(savedDoctor.getPermissions()).build();
 
-	        response.setSuccess(true);
-	        response.setData(data);
-	        response.setMessage("Doctor added successfully with login credentials");
-	        response.setStatus(HttpStatus.CREATED.value());
+			credentialsRepository.save(credentials);
 
-	    } catch (Exception e) {
-	        response.setSuccess(false);
-	        response.setMessage("Error occurred while adding doctor: " + e.getMessage());
-	        response.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
-	    }
+			Map<String, Object> data = new HashMap<>();
+			data.put("doctor", savedDoctor);
+			data.put("username", username);
+			data.put("temporaryPassword", rawPassword);
+			data.put("generatedDoctorId", doctorId);
 
-	    return response;
+			response.setSuccess(true);
+			response.setData(data);
+			response.setMessage("Doctor added successfully with login credentials");
+			response.setStatus(HttpStatus.CREATED.value());
+
+		} catch (Exception e) {
+			response.setSuccess(false);
+			response.setMessage("Error occurred while adding doctor: " + e.getMessage());
+			response.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
+		}
+
+		return response;
 	}
 
-@Override
+	@Override
 	public Response getAllDoctors() {
 		Response response = new Response();
 		try {
@@ -280,7 +287,7 @@ public class DoctorServiceImpl implements DoctorService {
 		} catch (Exception e) {
 			response.setSuccess(false);
 			response.setMessage("An error occurred while fetching doctors for hospitalId: " + hospitalId);
-			response.setStatus(500); 
+			response.setStatus(500);
 		}
 		return response;
 	}
@@ -506,6 +513,90 @@ public class DoctorServiceImpl implements DoctorService {
 			response.setMessage("Error deleting doctor: " + e.getMessage());
 		}
 		return response;
+	}
+
+	@Override
+
+	public Response deleteDoctorFromBranch(String doctorId, String branchId) {
+
+		Response response = new Response();
+
+		Optional<Doctors> optionalDoctor = doctorsRepository.findByDoctorId(doctorId);
+
+		if (optionalDoctor.isEmpty()) {
+
+			response.setSuccess(false);
+
+			response.setStatus(HttpStatus.NOT_FOUND.value());
+
+			response.setMessage("Doctor not found with ID: " + doctorId);
+
+			return response;
+
+		}
+
+		Doctors doctor = optionalDoctor.get();
+
+		if (doctor.getBranches() == null || doctor.getBranches().isEmpty()) {
+
+			response.setSuccess(false);
+
+			response.setStatus(HttpStatus.BAD_REQUEST.value());
+
+			response.setMessage("Doctor has no branches assigned");
+
+			return response;
+
+		}
+
+		// Remove the branch
+
+		Boolean removed = doctor.getBranches().removeIf(b -> b.getBranchId().equals(branchId));
+
+		if (!removed) {
+
+			response.setSuccess(false);
+
+			response.setStatus(HttpStatus.NOT_FOUND.value());
+
+			response.setMessage("Doctor not assigned to branch: " + branchId);
+
+			return response;
+
+		}
+
+		if (doctor.getBranches().isEmpty()) {
+
+			// No branches left, delete the doctor and credentials
+
+			doctorsRepository.deleteById(doctor.getId());
+
+			Optional<DoctorLoginCredentials> optionalCredentials = credentialsRepository.findByStaffId(doctorId);
+
+			optionalCredentials.ifPresent(credentialsRepository::delete);
+
+			response.setSuccess(true);
+
+			response.setStatus(HttpStatus.OK.value());
+
+			response.setMessage("Doctor deleted entirely as no branches left");
+
+		} else {
+
+			// Update doctor with remaining branches
+
+			doctorsRepository.save(doctor);
+
+			response.setSuccess(true);
+
+			response.setStatus(HttpStatus.OK.value());
+
+			response.setMessage("Doctor removed from branch successfully");
+
+		}
+
+		return response;
+
 	}
 
 	@Override
@@ -839,8 +930,14 @@ public class DoctorServiceImpl implements DoctorService {
 			doctorSlot.setAvailableSlots(updatedSlots);
 			slotRepository.save(doctorSlot);
 
-			DoctorSlotDTO dto = new DoctorSlotDTO(doctorSlot.getDoctorId(), doctorSlot.getHospitalId(),
-					doctorSlot.getBranchId(), doctorSlot.getDate(), updatedSlots);
+			DoctorSlotDTO dto = new DoctorSlotDTO();
+			dto.setDoctorId(doctorSlot.getDoctorId());
+			dto.setHospitalId(doctorSlot.getHospitalId());
+			dto.setBranchId(doctorSlot.getBranchId());
+			dto.setBranchName(doctorSlot.getBranchName());
+			dto.setDate(doctorSlot.getDate());
+			dto.setAvailableSlots(updatedSlots);
+
 			response.setSuccess(true);
 			response.setData(dto);
 			response.setMessage("Slot deleted successfully");
@@ -964,13 +1061,179 @@ public class DoctorServiceImpl implements DoctorService {
 			return false;
 		}
 	}
-	// ---------------------------------------------Slots using branchId----------------------------------------------
+	// ---------------------------------------------Slots using
+	// branchId----------------------------------------------
 
-	// -------------------------------------Adding Slots--------------------------------------------------------------
+	// -------------------------------------Adding
+	// Slots--------------------------------------------------------------
+//	@Override
+//	public Response saveDoctorSlot(String hospitalId, String branchId, String doctorId, DoctorSlotDTO dto) {
+//
+//		Response response = new Response();
+//		try {
+//			if (dto == null || dto.getAvailableSlots() == null || dto.getAvailableSlots().isEmpty()) {
+//				throw new IllegalArgumentException("Invalid slot details provided");
+//			}
+//
+//			Optional<Doctors> getDoctor = doctorsRepository.findByDoctorId(doctorId);
+//			if (getDoctor.isEmpty()) {
+//				response.setSuccess(false);
+//				response.setMessage("Doctor not found with ID: " + doctorId);
+//				response.setStatus(HttpStatus.NOT_FOUND.value());
+//				return response;
+//			}
+//
+//			DoctorSlot existingSlot = slotRepository.findByDoctorIdAndBranchIdAndDate(doctorId, branchId,
+//					dto.getDate());
+//			DoctorSlot savedSlot;
+//
+//			if (existingSlot != null) {
+//				List<DoctorAvailableSlotDTO> currentSlots = existingSlot.getAvailableSlots();
+//				List<DoctorAvailableSlotDTO> newUniqueSlots = dto.getAvailableSlots().stream()
+//						.filter(incoming -> currentSlots.stream()
+//								.noneMatch(existing -> existing.getSlot().equals(incoming.getSlot())))
+//						.toList();
+//
+//				currentSlots.addAll(newUniqueSlots);
+//				existingSlot.setAvailableSlots(currentSlots);
+//				savedSlot = slotRepository.save(existingSlot);
+//			} else {
+//				DoctorSlot newSlot = DoctorSlotMapper.doctorSlotDTOtoEntity(dto);
+//				newSlot.setDoctorId(doctorId);
+//				newSlot.setHospitalId(hospitalId);
+//				newSlot.setBranchId(branchId);
+//				savedSlot = slotRepository.save(newSlot);
+//			}
+//
+//			response.setSuccess(true);
+//			response.setData(savedSlot);
+//			response.setMessage("Slot(s) saved successfully");
+//			response.setStatus(HttpStatus.CREATED.value());
+//
+//		} catch (IllegalArgumentException e) {
+//			response.setSuccess(false);
+//			response.setMessage("Validation Error: " + e.getMessage());
+//			response.setStatus(HttpStatus.BAD_REQUEST.value());
+//
+//		} catch (Exception e) {
+//			response.setSuccess(false);
+//			response.setMessage("An error occurred while saving slots: " + e.getMessage());
+//			response.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
+//		}
+//
+//		return response;
+//	}
+//	
+
+	// ------------------------------Save doctor slots
+	// dynamically-----------------------------------------------
+//		@Override
+//		public Response saveDoctorSlot(String hospitalId, String branchId, String doctorId, DoctorSlotDTO dto) {
+//			Response response = new Response();
+//
+//			try {
+//				// Validate input
+//				if (dto == null || dto.getDate() == null || dto.getDate().isBlank() || dto.getSlotInterval() <= 0
+//						|| dto.getOpeningTime() == null || dto.getClosingTime() == null) {
+//					throw new IllegalArgumentException(
+//							"Invalid slot details. Date, interval, openingTime, closingTime are required.");
+//				}
+//
+//				Optional<Doctors> getDoctor = doctorsRepository.findByDoctorId(doctorId);
+//				if (getDoctor.isEmpty()) {
+//					response.setSuccess(false);
+//					response.setMessage("Doctor not found with ID: " + doctorId);
+//					response.setStatus(HttpStatus.NOT_FOUND.value());
+//					return response;
+//				}
+//
+//				// Generate all slots dynamically
+//				List<DoctorAvailableSlotDTO> generatedSlots = generateSlots(dto.getOpeningTime(), dto.getClosingTime(),
+//						dto.getSlotInterval());
+//
+//				// Fetch all slots of doctor for same date (all branches)
+//				List<DoctorSlot> doctorSlotsOnDate = slotRepository.findAllByDoctorIdAndDate(doctorId, dto.getDate());
+//
+//				// Check conflicts and attach branch info using Feign client
+//				generatedSlots.forEach(slot -> {
+//					doctorSlotsOnDate.forEach(existingSlot -> {
+//						if (existingSlot.getAvailableSlots() != null && isOverlapping(slot.getSlot(), dto.getSlotInterval(),
+//								existingSlot.getAvailableSlots(), dto.getSlotInterval())) {
+//
+//							slot.setAvailable(false);
+//
+//							// Fetch branch name from Feign client if not present
+//							String existingBranchName = existingSlot.getBranchName();
+//							if (existingBranchName == null || existingBranchName.isBlank()) {
+//								ResponseEntity<Response> branchResp = adminServiceClient
+//										.getBranchById(existingSlot.getBranchId());
+//								Branch branchDetails = objectMapper.convertValue(branchResp.getBody().getData(),
+//										Branch.class);
+//								existingBranchName = branchDetails != null ? branchDetails.getBranchName()
+//										: "Unknown Branch";
+//							}
+//
+//							slot.setReason("Already exists in " + existingBranchName);
+//						}
+//					});
+//				});
+//
+//				// Save only selected slots from frontend
+//				List<DoctorAvailableSlotDTO> slotsToSave = dto.getAvailableSlots();
+//
+//				if (slotsToSave != null && !slotsToSave.isEmpty()) {
+//					DoctorSlot existingSlot = slotRepository.findByDoctorIdAndBranchIdAndDate(doctorId, branchId,
+//							dto.getDate());
+//
+//					if (existingSlot != null) {
+//						List<DoctorAvailableSlotDTO> currentSlots = existingSlot.getAvailableSlots();
+//						List<DoctorAvailableSlotDTO> newUniqueSlots = slotsToSave.stream().filter(incoming -> currentSlots
+//								.stream().noneMatch(existing -> existing.getSlot().equals(incoming.getSlot()))).toList();
+//
+//						currentSlots.addAll(newUniqueSlots);
+//						existingSlot.setAvailableSlots(currentSlots);
+//						slotRepository.save(existingSlot);
+//					} else {
+//						DoctorSlot newSlot = new DoctorSlot();
+//						newSlot.setDoctorId(doctorId);
+//						newSlot.setHospitalId(hospitalId);
+//						newSlot.setBranchId(branchId);
+//						newSlot.setDate(dto.getDate());
+//
+//						// Fetch branch name
+//						ResponseEntity<Response> branchResponse = adminServiceClient.getBranchById(branchId);
+//						Branch branchDetails = objectMapper.convertValue(branchResponse.getBody().getData(), Branch.class);
+//						if (branchDetails != null) {
+//							newSlot.setBranchName(branchDetails.getBranchName());
+//						}
+//
+//						newSlot.setAvailableSlots(slotsToSave);
+//						slotRepository.save(newSlot);
+//					}
+//				}
+//
+//				response.setSuccess(true);
+//				response.setData(generatedSlots);
+//				response.setMessage("Slots generated successfully. Selected slots saved with branch info.");
+//				response.setStatus(HttpStatus.OK.value());
+//
+//			} catch (IllegalArgumentException e) {
+//				response.setSuccess(false);
+//				response.setMessage("Validation Error: " + e.getMessage());
+//				response.setStatus(HttpStatus.BAD_REQUEST.value());
+//			} catch (Exception e) {
+//				response.setSuccess(false);
+//				response.setMessage("An error occurred while saving slots: " + e.getMessage());
+//				response.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
+//			}
+//
+//			return response;
+//		}
+//
 	@Override
 	public Response saveDoctorSlot(String hospitalId, String branchId, String doctorId, DoctorSlotDTO dto) {
-
 		Response response = new Response();
+
 		try {
 			if (dto == null || dto.getAvailableSlots() == null || dto.getAvailableSlots().isEmpty()) {
 				throw new IllegalArgumentException("Invalid slot details provided");
@@ -984,32 +1247,72 @@ public class DoctorServiceImpl implements DoctorService {
 				return response;
 			}
 
-			DoctorSlot existingSlot = slotRepository.findByDoctorIdAndBranchIdAndDate(doctorId, branchId,
-					dto.getDate());
-			DoctorSlot savedSlot;
+			// ✅ Fetch ALL slots of doctor on the same date (across all branches)
+			List<DoctorSlot> doctorSlotsOnDate = slotRepository.findAllByDoctorIdAndDate(doctorId, dto.getDate());
 
-			if (existingSlot != null) {
-				List<DoctorAvailableSlotDTO> currentSlots = existingSlot.getAvailableSlots();
-				List<DoctorAvailableSlotDTO> newUniqueSlots = dto.getAvailableSlots().stream()
-						.filter(incoming -> currentSlots.stream()
-								.noneMatch(existing -> existing.getSlot().equals(incoming.getSlot())))
-						.toList();
+			// ✅ Prepare slots with availability info
+			List<DoctorAvailableSlotDTO> slotsWithAvailability = dto.getAvailableSlots().stream().map(incomingSlot -> {
+				// Check if slot already exists in another branch
+				Optional<DoctorSlot> conflictingSlot = doctorSlotsOnDate.stream().filter(slot -> slot
+						.getAvailableSlots().stream().anyMatch(s -> s.getSlot().equals(incomingSlot.getSlot())))
+						.findFirst();
 
-				currentSlots.addAll(newUniqueSlots);
-				existingSlot.setAvailableSlots(currentSlots);
-				savedSlot = slotRepository.save(existingSlot);
-			} else {
-				DoctorSlot newSlot = DoctorSlotMapper.doctorSlotDTOtoEntity(dto);
-				newSlot.setDoctorId(doctorId);
-				newSlot.setHospitalId(hospitalId);
-				newSlot.setBranchId(branchId);
-				savedSlot = slotRepository.save(newSlot);
+				if (conflictingSlot.isPresent()) {
+					String existingBranchId = conflictingSlot.get().getBranchId();
+					String existingBranchName = conflictingSlot.get().getBranchName(); // ✅ Already stored in DB
+
+					incomingSlot.setAvailable(false);
+					incomingSlot.setReason("Already exists in " + existingBranchName + " Branch");
+				} else {
+					incomingSlot.setAvailable(true);
+					incomingSlot.setReason(null);
+				}
+
+				return incomingSlot;
+			}).toList();
+
+			// ✅ Filter only slots that are available to save in this branch
+			List<DoctorAvailableSlotDTO> slotsToSave = slotsWithAvailability.stream()
+					.filter(DoctorAvailableSlotDTO::isAvailable).toList();
+
+			DoctorSlot savedSlot = null;
+
+			if (!slotsToSave.isEmpty()) {
+				// Check if doctor already has slots in this branch for the same date
+				DoctorSlot existingSlot = slotRepository.findByDoctorIdAndBranchIdAndDate(doctorId, branchId,
+						dto.getDate());
+				if (existingSlot != null) {
+					List<DoctorAvailableSlotDTO> currentSlots = existingSlot.getAvailableSlots();
+
+					// Add only new unique slots
+					List<DoctorAvailableSlotDTO> newUniqueSlots = slotsToSave.stream().filter(incoming -> currentSlots
+							.stream().noneMatch(existing -> existing.getSlot().equals(incoming.getSlot()))).toList();
+
+					currentSlots.addAll(newUniqueSlots);
+					existingSlot.setAvailableSlots(currentSlots);
+					savedSlot = slotRepository.save(existingSlot);
+				} else {
+					DoctorSlot newSlot = DoctorSlotMapper.doctorSlotDTOtoEntity(dto);
+
+					// ✅ Fetch branch details for saving (only once)
+					ResponseEntity<Response> branchResponse = adminServiceClient.getBranchById(branchId);
+					Branch branchDetails = objectMapper.convertValue(branchResponse.getBody().getData(), Branch.class);
+
+					newSlot.setDoctorId(doctorId);
+					newSlot.setHospitalId(hospitalId);
+					newSlot.setBranchId(branchId);
+					if (branchDetails != null) {
+						newSlot.setBranchName(branchDetails.getBranchName()); // ✅ Store branch name in DB
+					}
+					newSlot.setAvailableSlots(slotsToSave);
+					savedSlot = slotRepository.save(newSlot);
+				}
 			}
 
 			response.setSuccess(true);
-			response.setData(savedSlot);
-			response.setMessage("Slot(s) saved successfully");
-			response.setStatus(HttpStatus.CREATED.value());
+			response.setData(slotsWithAvailability);
+			response.setMessage("Slots processed successfully. Unavailable slots are flagged with branch info.");
+			response.setStatus(HttpStatus.OK.value());
 
 		} catch (IllegalArgumentException e) {
 			response.setSuccess(false);
@@ -1025,7 +1328,220 @@ public class DoctorServiceImpl implements DoctorService {
 		return response;
 	}
 
-//		-------------------------Get Slots by Doctors -------------------------------------------
+//	@Override
+//	public Response generateDoctorSlots(String doctorId, String branchId, String date, int intervalMinutes,
+//			String openingTime, String closingTime) {
+//		Response response = new Response();
+//		try {
+//			// ✅ Normalize input times
+//			openingTime = normalizeTime(URLDecoder.decode(openingTime, StandardCharsets.UTF_8));
+//			closingTime = normalizeTime(URLDecoder.decode(closingTime, StandardCharsets.UTF_8));
+//
+//			// ✅ Generate all possible slots
+//			List<DoctorAvailableSlotDTO> generatedSlots = generateSlots(openingTime, closingTime, intervalMinutes);
+//
+//			// ✅ Fetch all existing slots of the doctor on the same date (all branches)
+//			List<DoctorSlot> doctorSlotsOnDate = slotRepository.findAllByDoctorIdAndDate(doctorId, date);
+//
+//			// Flatten all existing slots from DB for faster comparison
+//			List<DoctorAvailableSlotDTO> existingSlots = doctorSlotsOnDate.stream()
+//					.flatMap(ds -> ds.getAvailableSlots().stream().map(s -> {
+//						DoctorAvailableSlotDTO dto = new DoctorAvailableSlotDTO();
+//						dto.setSlot(normalizeTime(s.getSlot()));
+//						dto.setAvailable(s.isAvailable());
+//						dto.setReason(ds.getBranchName());
+//						return dto;
+//					})).toList();
+//
+//			// ✅ Compare generated slots with DB slots
+//			generatedSlots.forEach(slot -> {
+//				Optional<DoctorAvailableSlotDTO> conflict = existingSlots.stream()
+//						.filter(es -> normalizeTime(es.getSlot()).equals(normalizeTime(slot.getSlot()))).findFirst();
+//
+//				if (conflict.isPresent()) {
+//					slot.setAvailable(false);
+//					String branchName = conflict.get().getReason();
+//					slot.setReason("Already exists in " + (branchName != null ? branchName : "another branch"));
+//				} else {
+//					slot.setAvailable(true);
+//					slot.setReason(null);
+//				}
+//			});
+//
+//			// ✅ Log final slot states
+//			System.out.println("Final generated slots:");
+//			generatedSlots.forEach(s -> System.out
+//					.println(s.getSlot() + " | Available: " + s.isAvailable() + " | Reason: " + s.getReason()));
+//
+//			// ✅ Add summary to response message
+//			long unavailableCount = generatedSlots.stream().filter(s -> !s.isAvailable()).count();
+//			response.setSuccess(true);
+//			response.setData(generatedSlots);
+//			response.setMessage("Slots generated successfully. " + unavailableCount
+//					+ " slot(s) are unavailable due to branch conflicts.");
+//			response.setStatus(200);
+//
+//		} catch (Exception e) {
+//			response.setSuccess(false);
+//			response.setMessage("Error generating slots: " + e.getMessage());
+//			response.setStatus(500);
+//		}
+//
+//		return response;
+//	}
+//
+	@Override
+	public Response generateDoctorSlots(String doctorId, String branchId, String date, int intervalMinutes,
+	        String openingTime, String closingTime) {
+	    Response response = new Response();
+	    try {
+	        // ✅ Normalize input times
+	        openingTime = normalizeTime(URLDecoder.decode(openingTime, StandardCharsets.UTF_8));
+	        closingTime = normalizeTime(URLDecoder.decode(closingTime, StandardCharsets.UTF_8));
+
+	        // ✅ Generate all possible slots
+	        List<DoctorAvailableSlotDTO> generatedSlots = generateSlots(openingTime, closingTime, intervalMinutes);
+
+	        // ✅ Fetch all existing slots of the doctor on the same date (all branches)
+	        List<DoctorSlot> doctorSlotsOnDate = slotRepository.findAllByDoctorIdAndDate(doctorId, date);
+
+	        // Flatten all existing slots from DB for faster comparison
+	        List<DoctorAvailableSlotDTO> existingSlots = doctorSlotsOnDate.stream()
+	                .flatMap(ds -> ds.getAvailableSlots().stream().map(s -> {
+	                    DoctorAvailableSlotDTO dto = new DoctorAvailableSlotDTO();
+	                    dto.setSlot(normalizeTime(s.getSlot()));
+	                    dto.setAvailable(s.isAvailable());
+	                    dto.setReason(ds.getBranchName());
+	                    return dto;
+	                })).toList();
+
+	        // ✅ Compare generated slots with DB slots using overlap logic
+	        generatedSlots.forEach(slot -> {
+	            DoctorAvailableSlotDTO conflictSlot = existingSlots.stream()
+	                .filter(existing -> isOverlapping(slot.getSlot(), intervalMinutes, List.of(existing), 30)) // assuming 30-minute slots
+	                .findFirst()
+	                .orElse(null);
+
+	            if (conflictSlot != null) {
+	                slot.setAvailable(false);
+	                slot.setReason("Already exists in " + conflictSlot.getReason() + " Branch");
+	            } else {
+	                slot.setAvailable(true);
+	                slot.setReason(null);
+	            }
+	        });
+
+
+	        // ✅ Log final slot states
+	        System.out.println("Final generated slots:");
+	        generatedSlots.forEach(s -> System.out
+	                .println(s.getSlot() + " | Available: " + s.isAvailable() + " | Reason: " + s.getReason()));
+
+	        // ✅ Add summary to response message
+	        long unavailableCount = generatedSlots.stream().filter(s -> !s.isAvailable()).count();
+	        response.setSuccess(true);
+	        response.setData(generatedSlots);
+	        response.setMessage("Slots generated successfully. " + unavailableCount
+	                + " slot(s) are unavailable due to branch conflicts.");
+	        response.setStatus(200);
+
+	    } catch (Exception e) {
+	        response.setSuccess(false);
+	        response.setMessage("Error generating slots: " + e.getMessage());
+	        response.setStatus(500);
+	    }
+
+	    return response;
+	}
+
+	private List<DoctorAvailableSlotDTO> generateSlots(String openingTime, String closingTime, int intervalMinutes) {
+		DateTimeFormatter formatter = new DateTimeFormatterBuilder().parseCaseInsensitive().appendPattern("h:mm a")
+				.toFormatter(Locale.ENGLISH);
+
+		System.out.println("OpeningTime: '" + openingTime + "'");
+		System.out.println("ClosingTime: '" + closingTime + "'");
+
+		LocalTime start;
+		LocalTime end;
+
+		try {
+			start = LocalTime.parse(openingTime, formatter);
+			end = LocalTime.parse(closingTime, formatter);
+		} catch (DateTimeParseException e) {
+			throw new RuntimeException("Failed to parse time: " + e.getParsedString(), e);
+		}
+
+		List<DoctorAvailableSlotDTO> slots = new ArrayList<>();
+		while (!start.isAfter(end.minusMinutes(intervalMinutes))) {
+			DoctorAvailableSlotDTO slot = new DoctorAvailableSlotDTO();
+			slot.setSlot(start.format(formatter));
+			slot.setAvailable(true);
+			slots.add(slot);
+			start = start.plusMinutes(intervalMinutes);
+		}
+		return slots;
+	}
+
+	private String normalizeTime(String time) {
+		time = time.trim().replaceAll("\\s+", " ").toUpperCase();
+		time = time.replaceAll("(?<=\\d)(AM|PM)", " $1");
+		return time;
+	}
+
+	private boolean isOverlapping(String newSlot, int newInterval, List<DoctorAvailableSlotDTO> existingSlots, int existingInterval) {
+	    DateTimeFormatter formatter = new DateTimeFormatterBuilder()
+	            .parseCaseInsensitive()
+	            .appendPattern("h:mm a")
+	            .toFormatter(Locale.ENGLISH);
+
+	    newSlot = normalizeTime(newSlot);
+	    LocalTime newStart = LocalTime.parse(newSlot, formatter);
+	    LocalTime newEnd = newStart.plusMinutes(newInterval);
+
+	    for (DoctorAvailableSlotDTO existing : existingSlots) {
+	        if (existing.getSlot() == null) continue;
+
+	        String existingSlotStr = normalizeTime(existing.getSlot());
+	        LocalTime existStart = LocalTime.parse(existingSlotStr, formatter);
+
+	        // Ensure existingInterval is valid
+	        int effectiveInterval = existingInterval > 0 ? existingInterval : newInterval;
+	        LocalTime existEnd = existStart.plusMinutes(effectiveInterval);
+
+	        // Improved overlap logic: true if any part of the new slot overlaps with existing
+	        boolean overlaps = newStart.isBefore(existEnd) && newEnd.isAfter(existStart);
+	        if (overlaps) {
+	            return true;
+	        }
+	    }
+	    return false;
+	}
+
+//	private boolean isOverlapping(String newSlot, int newInterval, List<DoctorAvailableSlotDTO> existingSlots,
+//			int existingInterval) {
+//		DateTimeFormatter formatter = new DateTimeFormatterBuilder().parseCaseInsensitive().appendPattern("h:mm a")
+//				.toFormatter(Locale.ENGLISH);
+//
+//		newSlot = normalizeTime(newSlot);
+//		LocalTime newStart = LocalTime.parse(newSlot, formatter);
+//
+//		for (DoctorAvailableSlotDTO existing : existingSlots) {
+//			if (existing.getSlot() == null)
+//				continue;
+//
+//			String existingSlotStr = normalizeTime(existing.getSlot());
+//			LocalTime existStart = LocalTime.parse(existingSlotStr, formatter);
+//
+//// ✅ Only block if slot times are exactly same
+//			if (newStart.equals(existStart)) {
+//				return true;
+//			}
+//		}
+//		return false;
+//	}
+
+	// -------------------------Get Slots by Doctors
+	// -------------------------------------------
 	@Override
 	public Response getDoctorSlots(String hospitalId, String branchId, String doctorId) {
 		List<DoctorSlot> slots = slotRepository.findByHospitalIdAndBranchIdAndDoctorId(hospitalId, branchId, doctorId);
@@ -1126,8 +1642,8 @@ public class DoctorServiceImpl implements DoctorService {
 			}
 
 			// Fetch doctors by hospitalId, branchId, and subServiceId
-			List<Doctors> doctors = doctorsRepository.findByHospitalIdAndBranchesBranchIdAndSubServicesSubServiceId(hospitalId,
-					branchId, subServiceId);
+			List<Doctors> doctors = doctorsRepository
+					.findByHospitalIdAndBranchesBranchIdAndSubServicesSubServiceId(hospitalId, branchId, subServiceId);
 
 			List<DoctorsDTO> doctorDTOs = doctors.stream().map(DoctorMapper::mapDoctorEntityToDoctorDTO)
 					.collect(Collectors.toList());
@@ -1695,209 +2211,265 @@ public class DoctorServiceImpl implements DoctorService {
 		return response;
 	}
 
-	// ------------------------------Universal
-	// Login---------------------------------------------------
+//	// ------------------------------Universal
+//	// Login---------------------------------------------------
+//	@Override
+//	public Response loginUsingRoles(DoctorLoginDTO dto) {
+//		Response response = new Response();
+//		Optional<DoctorLoginCredentials> credentials = credentialsRepository.findByUsername(dto.getUserName());
+//
+//		if (!credentials.isPresent()) {
+//			response.setSuccess(false);
+//			response.setMessage("Invalid UserName");
+//			response.setStatus(409);
+//			return response;
+//		}
+//
+//		DoctorLoginCredentials cr = credentials.get();
+//
+//		// Fix: dto.getPassword() should come first 
+//		if (!passwordEncoder.matches(dto.getPassword(), cr.getPassword())) {
+//			response.setSuccess(false);
+//			response.setMessage("Invalid password");
+//			response.setStatus(409);
+//			return response;
+//		}
+//
+//		// Here you compared role with password by mistake
+//		// Fix: compare role with dto.getRole()
+//		if (!cr.getRole().toUpperCase().equals(dto.getRole().toUpperCase())) {
+//			response.setSuccess(false);
+//			response.setMessage("Invalid Role");
+//			response.setStatus(409);
+//			return response;
+//		}
+//		DoctorLoginDTO resDto = new DoctorLoginDTO();
+//		resDto.setUserName(cr.getUsername());
+//		resDto.setRole(cr.getRole());
+//		resDto.setDeviceId(dto.getDeviceId());
+//		resDto.setStaffId(cr.getStaffId());
+//		resDto.setStaffName(cr.getStaffName());
+//		resDto.setHospitalId(cr.getHospitalId());
+//		resDto.setHospitalName(cr.getHospitalName());
+//		resDto.setBranchId(cr.getBranchId());
+//		resDto.setPermissions(cr.getPermissions());
+//
+//		response.setSuccess(true);
+//		response.setMessage("Login Successfully");
+//		response.setData(resDto);
+//		response.setStatus(200);
+//
+//		return response;
+//	}
 	@Override
 	public Response loginUsingRoles(DoctorLoginDTO dto) {
 		Response response = new Response();
-		Optional<DoctorLoginCredentials> credentials = credentialsRepository.findByUsername(dto.getUserName());
+		try {
+			Optional<DoctorLoginCredentials> credentials = credentialsRepository.findByUsername(dto.getUserName());
 
-		if (!credentials.isPresent()) {
+			if (credentials.isEmpty()) {
+				response.setSuccess(false);
+				response.setMessage("Invalid UserName");
+				response.setStatus(409);
+				return response;
+			}
+
+			DoctorLoginCredentials cr = credentials.get();
+
+			// Password check
+			if (passwordEncoder == null || !passwordEncoder.matches(dto.getPassword(), cr.getPassword())) {
+				response.setSuccess(false);
+				response.setMessage("Invalid password");
+				response.setStatus(409);
+				return response;
+			}
+
+			// Role check (null-safe)
+			if (dto.getRole() == null || !cr.getRole().equalsIgnoreCase(dto.getRole())) {
+				response.setSuccess(false);
+				response.setMessage("Invalid Role");
+				response.setStatus(409);
+				return response;
+			}
+
+			// Prepare response DTO
+			DoctorLoginDTO resDto = new DoctorLoginDTO();
+			resDto.setUserName(cr.getUsername());
+			resDto.setRole(cr.getRole());
+			resDto.setDeviceId(dto.getDeviceId());
+			resDto.setStaffId(cr.getStaffId());
+			resDto.setStaffName(cr.getStaffName());
+			resDto.setHospitalId(cr.getHospitalId());
+			resDto.setHospitalName(cr.getHospitalName());
+			resDto.setBranchId(cr.getBranchId());
+			resDto.setBranchName(cr.getBranchName());
+
+			// ⚠️ Ensure permissions is safe for serialization
+			resDto.setPermissions(cr.getPermissions());
+
+			response.setSuccess(true);
+			response.setMessage("Login Successfully");
+			response.setData(resDto);
+			response.setStatus(200);
+
+		} catch (Exception e) {
 			response.setSuccess(false);
-			response.setMessage("Invalid UserName");
-			response.setStatus(409);
-			return response;
+			response.setMessage("Login error: " + e.getMessage());
+			response.setStatus(500);
 		}
-
-		DoctorLoginCredentials cr = credentials.get();
-
-		// Fix: dto.getPassword() should come first
-		if (!passwordEncoder.matches(dto.getPassword(), cr.getPassword())) {
-			response.setSuccess(false);
-			response.setMessage("Invalid password");
-			response.setStatus(409);
-			return response;
-		}
-
-		// Here you compared role with password by mistake
-		// Fix: compare role with dto.getRole()
-		if (!cr.getRole().toUpperCase().equals(dto.getRole().toUpperCase())) {
-			response.setSuccess(false);
-			response.setMessage("Invalid Role");
-			response.setStatus(409);
-			return response;
-		}
-		DoctorLoginDTO resDto = new DoctorLoginDTO();
-		resDto.setUserName(cr.getUsername());
-		resDto.setRole(cr.getRole());
-		resDto.setDeviceId(dto.getDeviceId());
-		resDto.setStaffId(cr.getStaffId());
-		resDto.setStaffName(cr.getStaffName());
-		resDto.setHospitalId(cr.getHospitalId());
-		resDto.setHospitalName(cr.getHospitalName());
-		resDto.setBranchId(cr.getBranchId());
-		resDto.setPermissions(cr.getPermissions());
-
-		response.setSuccess(true);
-		response.setMessage("Login Successfully");
-		response.setData(resDto);
-		response.setStatus(200);
-
 		return response;
 	}
+
 //-----------------------best one doctor using key word-------------------------------------------
 	@Override
 	public Response getRecommendedClinicsAndDoctors(List<String> keyPointsFromUser) {
-	    Logger log = LoggerFactory.getLogger(getClass());
+		Logger log = LoggerFactory.getLogger(getClass());
 
-	    ResponseEntity<Response> responseEntity = adminServiceClient.getHospitalUsingRecommendentaion();
-	    Response responseBody = responseEntity.getBody();
+		ResponseEntity<Response> responseEntity = adminServiceClient.getHospitalUsingRecommendentaion();
+		Response responseBody = responseEntity.getBody();
 
-	    ClinicWithDoctorsDTO bestClinic = null;
-	    DoctorsDTO bestDoctor = null;
-	    int bestScore = 0;
+		ClinicWithDoctorsDTO bestClinic = null;
+		DoctorsDTO bestDoctor = null;
+		int bestScore = 0;
 
-	    if (responseBody != null && responseBody.isSuccess()) {
-	        Object rawData = responseBody.getData();
-	        List<ClinicWithDoctorsDTO> clinics = new ObjectMapper().convertValue(
-	                rawData,
-	                new TypeReference<List<ClinicWithDoctorsDTO>>() {}
-	        );
+		if (responseBody != null && responseBody.isSuccess()) {
+			Object rawData = responseBody.getData();
+			List<ClinicWithDoctorsDTO> clinics = new ObjectMapper().convertValue(rawData,
+					new TypeReference<List<ClinicWithDoctorsDTO>>() {
+					});
 
-	        for (ClinicWithDoctorsDTO clinic : clinics) {
-	            if (clinic.getHospitalId() == null) continue;
+			for (ClinicWithDoctorsDTO clinic : clinics) {
+				if (clinic.getHospitalId() == null)
+					continue;
 
-	            List<Doctors> doctorEntities = doctorsRepository.findByHospitalId(clinic.getHospitalId());
+				List<Doctors> doctorEntities = doctorsRepository.findByHospitalId(clinic.getHospitalId());
 
-	            for (Doctors doctor : doctorEntities) {
-	                DoctorsDTO dto = DoctorMapper.mapDoctorEntityToDoctorDTO(doctor);
-	                int score = calculateDoctorScore(dto, keyPointsFromUser);
+				for (Doctors doctor : doctorEntities) {
+					DoctorsDTO dto = DoctorMapper.mapDoctorEntityToDoctorDTO(doctor);
+					int score = calculateDoctorScore(dto, keyPointsFromUser);
 
-	                log.info("Doctor: {} | Score: {}", dto.getDoctorName(), score);
+					log.info("Doctor: {} | Score: {}", dto.getDoctorName(), score);
 
-	                if (score > bestScore) {
-	                    bestScore = score;
-	                    bestDoctor = dto;
-	                    bestClinic = clinic;
-	                }
-	            }
-	        }
-	    }
+					if (score > bestScore) {
+						bestScore = score;
+						bestDoctor = dto;
+						bestClinic = clinic;
+					}
+				}
+			}
+		}
 
-	    if (bestDoctor != null && bestClinic != null) {
-	        bestClinic.setDoctors(List.of(bestDoctor));
-	        return Response.builder()
-	                .success(true)
-	                .status(HttpStatus.OK.value())
-	                .data(bestClinic)
-	                .message("Best doctor recommendation based on keywords, ratings, experience, and qualifications")
-	                .build();
-	    }
+		if (bestDoctor != null && bestClinic != null) {
+			bestClinic.setDoctors(List.of(bestDoctor));
+			return Response.builder().success(true).status(HttpStatus.OK.value()).data(bestClinic)
+					.message("Best doctor recommendation based on keywords, ratings, experience, and qualifications")
+					.build();
+		}
 
-	    return Response.builder()
-	            .success(false)
-	            .status(HttpStatus.NOT_FOUND.value())
-	            .message("No matching doctor found")
-	            .build();
+		return Response.builder().success(false).status(HttpStatus.NOT_FOUND.value())
+				.message("No matching doctor found").build();
 	}
+
 	private int calculateDoctorScore(DoctorsDTO doctor, List<String> keyPoints) {
-	    int score = 0;
+		int score = 0;
 
-	    // 1️⃣ Keyword match score
-	    if (keyPoints != null && !keyPoints.isEmpty()) {
-	        for (String key : keyPoints) {
-	            String lowerKey = key.toLowerCase();
+		// 1️⃣ Keyword match score
+		if (keyPoints != null && !keyPoints.isEmpty()) {
+			for (String key : keyPoints) {
+				String lowerKey = key.toLowerCase();
 
-	            if (doctor.getSubServices() != null) {
-	                for (DoctorSubServiceDTO sub : doctor.getSubServices()) {
-	                    if (sub != null && sub.getSubServiceName() != null
-	                            && sub.getSubServiceName().toLowerCase().contains(lowerKey)) {
-	                        score += 5; // weight for subService match
-	                    }
-	                }
-	            }
+				if (doctor.getSubServices() != null) {
+					for (DoctorSubServiceDTO sub : doctor.getSubServices()) {
+						if (sub != null && sub.getSubServiceName() != null
+								&& sub.getSubServiceName().toLowerCase().contains(lowerKey)) {
+							score += 5; // weight for subService match
+						}
+					}
+				}
 
-	            if (doctor.getService() != null) {
-	                for (DoctorServicesDTO service : doctor.getService()) {
-	                    if (service != null && service.getServiceName() != null
-	                            && service.getServiceName().toLowerCase().contains(lowerKey)) {
-	                        score += 4; // weight for service match
-	                    }
-	                }
-	            }
+				if (doctor.getService() != null) {
+					for (DoctorServicesDTO service : doctor.getService()) {
+						if (service != null && service.getServiceName() != null
+								&& service.getServiceName().toLowerCase().contains(lowerKey)) {
+							score += 4; // weight for service match
+						}
+					}
+				}
 
-	            if (doctor.getCategory() != null) {
-	                for (DoctorCategoryDTO category : doctor.getCategory()) {
-	                    if (category != null && category.getCategoryName() != null
-	                            && category.getCategoryName().toLowerCase().contains(lowerKey)) {
-	                        score += 3; // weight for category match
-	                    }
-	                }
-	            }
+				if (doctor.getCategory() != null) {
+					for (DoctorCategoryDTO category : doctor.getCategory()) {
+						if (category != null && category.getCategoryName() != null
+								&& category.getCategoryName().toLowerCase().contains(lowerKey)) {
+							score += 3; // weight for category match
+						}
+					}
+				}
 
-	            if (doctor.getSpecialization() != null
-	                    && doctor.getSpecialization().toLowerCase().contains(lowerKey)) {
-	                score += 6; // specialization match gets higher weight
-	            }
-	        }
-	    }
+				if (doctor.getSpecialization() != null && doctor.getSpecialization().toLowerCase().contains(lowerKey)) {
+					score += 6; // specialization match gets higher weight
+				}
+			}
+		}
 
-	    // 2️⃣ Rating (scale 0–5 → multiply by weight)
-	    score += (int) (doctor.getDoctorAverageRating() * 10);
+		// 2️⃣ Rating (scale 0–5 → multiply by weight)
+		score += (int) (doctor.getDoctorAverageRating() * 10);
 
-	    // 3️⃣ Experience (convert years string to int if possible)
-	    try {
-	        int years = Integer.parseInt(doctor.getExperience().replaceAll("[^0-9]", ""));
-	        score += years * 2; // each year of experience adds 2 points
-	    } catch (Exception e) {
-	        // ignore if parsing fails
-	    }
+		// 3️⃣ Experience (convert years string to int if possible)
+		try {
+			int years = Integer.parseInt(doctor.getExperience().replaceAll("[^0-9]", ""));
+			score += years * 2; // each year of experience adds 2 points
+		} catch (Exception e) {
+			// ignore if parsing fails
+		}
 
-	    // 4️⃣ Qualification priority
-	    if (doctor.getQualification() != null) {
-	        String q = doctor.getQualification().toLowerCase();
-	        if (q.contains("dm")) score += 30;
-	        else if (q.contains("md")) score += 20;
-	        else if (q.contains("ms")) score += 15;
-	        else if (q.contains("mbbs")) score += 10;
-	    }
+		// 4️⃣ Qualification priority
+		if (doctor.getQualification() != null) {
+			String q = doctor.getQualification().toLowerCase();
+			if (q.contains("dm"))
+				score += 30;
+			else if (q.contains("md"))
+				score += 20;
+			else if (q.contains("ms"))
+				score += 15;
+			else if (q.contains("mbbs"))
+				score += 10;
+		}
 
-	    
-
-	    return score;
+		return score;
 	}
+
 	@Override
 	public Response getDoctorsByHospitalIdAndBranchId(String hospitalId, String branchId) {
-	    Response response = new Response();
-	    try {
-	        List<Doctors> doctorList = doctorsRepository
-	            .findByHospitalIdAndBranchIdIncludingBranches(hospitalId, branchId);
+		Response response = new Response();
+		try {
+			// ✅ Fetch doctors assigned to this branch in their branches list
+			List<Doctors> doctorList = doctorsRepository.findByHospitalIdAndBranchIdIncludingBranches(hospitalId,
+					branchId);
 
-	        if (!doctorList.isEmpty()) {
-	            List<DoctorsDTO> dtos = doctorList.stream()
-	                    .map(DoctorMapper::mapDoctorEntityToDoctorDTO)
-	                    .collect(Collectors.toList());
+			// Filter out doctors that are not actually assigned to the branch
+			doctorList = doctorList.stream().filter(doc -> doc.getBranches() != null
+					&& doc.getBranches().stream().anyMatch(b -> branchId.equals(b.getBranchId()))).toList();
 
-	            response.setSuccess(true);
-	            response.setData(dtos);
-	            response.setMessage("Doctors fetched successfully for hospitalId: " 
-	                                 + hospitalId + " and branchId: " + branchId);
-	            response.setStatus(HttpStatus.OK.value());
-	        } else {
-	            response.setSuccess(true);
-	            response.setData(Collections.emptyList());
-	            response.setMessage("No doctors found for hospitalId: "
-	                                 + hospitalId + " and branchId: " + branchId);
-	            response.setStatus(HttpStatus.OK.value());
-	        }
-	    } catch (Exception e) {
-	        response.setSuccess(false);
-	        response.setMessage("Error fetching doctors: " + e.getMessage());
-	        response.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
-	    }
-	    return response;
+			if (!doctorList.isEmpty()) {
+				List<DoctorsDTO> dtos = doctorList.stream().map(DoctorMapper::mapDoctorEntityToDoctorDTO).toList();
+
+				response.setSuccess(true);
+				response.setData(dtos);
+				response.setMessage(
+						"Doctors fetched successfully for hospitalId: " + hospitalId + " and branchId: " + branchId);
+				response.setStatus(HttpStatus.OK.value());
+			} else {
+				response.setSuccess(true);
+				response.setData(Collections.emptyList());
+				response.setMessage("No doctors found for hospitalId: " + hospitalId + " and branchId: " + branchId);
+				response.setStatus(HttpStatus.OK.value());
+			}
+		} catch (Exception e) {
+			response.setSuccess(false);
+			response.setMessage("Error fetching doctors: " + e.getMessage());
+			response.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
+		}
+		return response;
 	}
-
-	
 
 }
